--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "emailjs-com": "^3.1.0",
     "firebase": "^8.6.8",
     "formik": "^2.2.9",
     "react": "^17.0.2",
